--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -5,6 +5,11 @@
     border:1px solid #999999;
     color: #ffffff;
 }
+.button[disabled] {
+    border:1px solid #ccc;
+    background-color: #ccc;
+    pointer-events: none;
+}
 
 .button-primary {
     background-color:#7B68EE;
